--- a/gb/21/6/1/n12992137.md
+++ b/gb/21/6/1/n12992137.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/snxhgu316/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/snxhgu316/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/snxhgu316/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/snxhgu316/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/snxhgu316/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/snxhgu316/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/snxhgu316/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【忠义传】以身挡敌 曹操的首席保镖典韦</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id12992149-Cao-Cao-Dian-Wei-600x400.png" />
 <h6>曹操与典韦像（公有领域、大纪元制作）
 </h6>
 <hr>
-<p>虎将如云的曹魏大营里，流传着一首歌谣：“帐下壮士有典君，提一双戟八十斤！”众将士交口称赞的，乃是形貌高大威武、寸步不离主公身边的近卫首领——<ahref="https://github.com/snxhgu316/djy/blob/master/gb/tag/%E5%85%B8%E9%9F%A6.md#1">典韦</a>。如果说魏武大帝<ahref="https://github.com/snxhgu316/djy/blob/master/gb/tag/%E6%9B%B9%E6%93%8D.md#1">曹操</a>是东汉末年的保护神，那么这位典君，便是用生命守护曹操的战神。</p>
-<p>在轰轰烈烈的历史大戏中，<ahref="https://github.com/snxhgu316/djy/blob/master/gb/tag/%E5%85%B8%E9%9F%A6.md#1">典韦</a>的戏份不算多，却像一颗最耀眼的流星，划过三国时代将星璀璨的天空。他拥有英雄豪杰应具备的所有要素：忠勇无畏的性情、勇冠三军的功夫以及精彩传奇的事迹。而他在谢幕的最后一个定格，留下了悲壮惨烈的牺牲画面，最终成为三国时期最令人扼腕的人物，也成了最受后世喜爱的三国大将之一。</p>
-<p>陈留人典韦，在史书中并没有留下其它名号。这样的人，要么身世卑微，籍籍无名；要么身负要案，隐姓埋名。神秘的典韦在《三国志》中的第一次亮相，是以刺客形象出现的。文中说他：“形貌魁梧，旅力过人，有志节任侠。”全然一个武艺高强而又古道热场的侠士。接下来，他展开了一场计划缜密、手段果决的暗杀行动。</p>
+<p>虎将如云的曹魏大营里，流传着一首歌谣：“帐下壮士有典君，提一双戟八十斤！”众将士交口称赞的，乃是形貌高大威武、寸步不离主公身边的近卫首领——<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B8%E9%9F%A6.md#1">典韦</a>。如果说魏武大帝<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%B9%E6%93%8D.md#1">曹操</a>是东汉末年的保护神，那么这位典君，便是用生命守护曹操的战神。</p>
+<p>在轰轰烈烈的历史大戏中，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B8%E9%9F%A6.md#1">典韦</a>的戏份不算多，却像一颗最耀眼的流星，划过三国时代将星璀璨的天空。他拥有英雄豪杰应具备的所有要素：忠勇无畏的性情、勇冠三军的功夫以及精彩传奇的事迹。而他在谢幕的最后一个定格，留下了悲壮惨烈的牺牲画面，最终成为三国时期最令人扼腕的人物，也成了最受后世喜爱的三国大将之一。</p>
+<p>陈留人典韦，在史书中并没有留下其它名号。这样的人，要么身世卑微，籍籍无名；要么身负要案，隐姓埋名。神秘的典韦在《三国志》中的第一次亮相，是以刺客形象出现的。文中说他：“形貌魁梧，旅力过人，有志节任侠。”全然一个武艺高强而又古道热肠的侠士。接下来，他展开了一场计划缜密、手段果决的暗杀行动。</p>
 <h2>侠义为怀</h2>
-<p>陈留隶属河南，是<ahref="https://github.com/snxhgu316/djy/blob/master/gb/tag/%E6%9B%B9%E6%93%8D.md#1">曹操</a>首倡义兵、召集英雄以共同讨伐董卓的地方。大约就在这个时间前后，河南地界出了一大命案。作案者典韦，一夜之间名震江湖，坊间巷里绘声绘色地讲述着他的事迹。</p>
+<p>陈留隶属河南，是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%B9%E6%93%8D.md#1">曹操</a>首倡义兵、召集英雄以共同讨伐董卓的地方。大约就在这个时间前后，河南地界出了一大命案。作案者典韦，一夜之间名震江湖，坊间巷里绘声绘色地讲述着他的事迹。</p>
 <p>事件起因是这样的，襄邑的刘氏与睢阳的李永不知因何事结仇，也不知陈留的典韦与刘氏有何深厚交情，典韦决意挺身而出，为刘氏报仇。李永做过富春的县长，应是当地一个大户；他仿佛真的做过亏心事一般，总是提防著有人要害他性命，在家中豢养几百侍卫。寻常人等根本不可能近他身，更别提刺杀了。</p>
 <p>这一天，一个汉子赶着车、载着酒食驶过街市，他自称是专程拜访李永的远客，在李府大院前停了下来。这汉子便是典韦。典韦在考察李府四周环境后，既没有穿着夜行衣飞檐走壁潜入主人内室，也没有挥舞着刀剑十步杀一人那样靠武力冲进大院。凭借乔装打扮和高超的演技，他竟然堂而皇之从正门走了进去，顺利闯过第一关。</p>
 <p>他和李永会面后，立刻改换面目，从怀里抽出匕首，手起刀落结束了李永的性命。紧接着，典韦以迅雷不及掩耳之势杀了李妻。前一秒还是笑容可掬的贵客，后一秒就成了替天行道的杀手，李府护卫不知道是吓破胆，还是内心并不想为其卖命，竟然没有人上前阻拦，眼睁睁看着典韦步出李府。</p>
@@ -54,53 +54,56 @@
 <p>另一边，曹操已经赶到舞阴，和主力军会合，正在焦急地等待典韦的讯息。然而他得到的，是一连串噩耗：长子曹昂死了，侄子曹安民死了，那个好酒食、护卫在他身后的壮士典韦，也永远离开了他。一场意外的败仗，让曹操痛失至亲和爱将。此刻的曹操悲从中来，不由热泪盈眶。弹泪必是情深处。典韦是在曹魏政权的草创期主动投奔的，两人有着同甘共苦的经历；更重要的是，他在曹操每一次遭到背叛和算计的时候，都义无反顾地站在曹操这边，直到付出生命。</p>
 <p>之后，曹操派人取回典韦的尸身，当看到典君惨烈阵亡的样子，再次忍不住放声大哭。典韦的一生是悲壮的，也是幸运的，曹操把最沉痛的眼泪给了他，也把最长久的怀念留给了他。</p>
 <p>在以后的日子里，曹操行军打仗，每每路过典韦墓地，一定会停下来，用中牢的隆重规格亲自祭拜。典韦有个儿子，曹操就把他带在身边，寄托追思之意；后来的文帝曹丕，也对典韦此子敬爱有加，拜官封爵给予极大的尊崇。</p>
-<p>这就是三国的侠士，他能为了私交义气孤身犯险，血流五步；更能为了君臣大义、性命相托，忠勇无悔。对知己，他们是两肋插刀的兄弟；对君上，他们是赴汤蹈火的死士。那股视死如归、明知不可为而为之的精神，为这段历史注入了更多任侠好义、慷慨豪荡的气概。#</p>
+<p>这就是三国的侠士，他能为了私交义气孤身犯险，血流五步；更能为了君臣大义、性命相托，忠勇无悔。对知己，他们是两肋插刀的兄弟；对君上，他们是赴汤蹈火的死士。那股视死如归、明知不可为而为之的精神，为这段历史注入了更多任侠好义、慷慨豪荡的气概。#◇</p>
+<p>参考资料：《三国志》</p>
+<p>点阅【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e5%bf%a0%e7%be%a9%e5%82%b3.md#1">忠义传</a>】系列文章</p>
 <p>责任编辑：张宪义</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/11/5/31/n3271877.md#1">报春梅：《三国演义》读后：权大势大不等于智慧大</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/11/9/15/n3373393.md#1">沉静：传统戏曲的人性和教化</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/16/3/31/n7479459.md#1">【文史】你不了解的曹操 神武雄才笑傲三国</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/16/4/4/n7519565.md#1">【文史】你不了解的曹操 淡泊物质天下归心</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/16/4/23/n7637003.md#1">【千古英雄人物】曹操(4) 仰天意 迎献帝</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/16/4/23/n7637126.md#1">【千古英雄人物】曹操(5) 讨袁术 伐吕布</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/19/12/16/n11726378.md#1">【三国英雄8】父兄遇害 腹背受敌 曹操如何应对（文字版）</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/19/12/28/n11751523.md#1">【三国英雄10】奉天子带来的机遇和风险（文字版）</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/27/n12980094.md#1">【忠义传】身中十二枪 舍命救孙权的周泰</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/27/n12980094.md#1">【忠义传】身中十二枪 舍命救孙权的周泰</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/8/n13008207.md#1">【忠义传】忠心护卫曹操的武林高手许褚</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/15/n13024307.md#1">【忠义传】单骑救主 赵云义重如山（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/15/n13024317.md#1">【忠义传】单骑救主 赵云义重如山（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13048015.md#1">【忠义传】义薄云天的华夏战神关羽</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/1/n13061630.md#1">【忠义传】从复仇少年到江东虎臣的凌统</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/8/n13077166.md#1">【忠义传】断桥救主 喝退曹军的张飞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/21/n13104752.md#1">【忠义传】九死一生 不忘汉帝使命的张骞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/15/n13376506.md#1">岳飞怎能成为全胜将军：他可歌可敬的小故事和中兴之战</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/27/n13192615.md#1">【忠义传】奴隶变国王 大将木华黎的传奇</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444363.md#1" target="_blank">共产暴政录：中共积极响应北塔山入侵事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/28/n12983090.md#1">【未解之谜】神话还是真相？三星堆与山海经</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/26/n12975963.md#1">【命理】预知死后家衰 他怎样为家人保留遗产？</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/27/n12980094.md#1">【忠义传】身中十二枪 舍命救孙权的周泰</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/27/n12980529.md#1">【未解之谜】胎记隐藏的秘密</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/30/n12986411.md#1">被遗忘的百年历史（I）1920至1950</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/6/1/n12991151.md#1">【唐浩视界】躺平瘫中共？三孩政策曝四大危机</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/6/2/n12992493.md#1">【新闻大家谈】北京自认陷绝境？再提大外宣</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/6/2/n12993834.md#1">【珍言真语】澳门六四集会突违法 区锦新：荒谬</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/28/n12982821.md#1">【预告】公开失传技艺 神韵身韵身法展示</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/31/n12989622.md#1">【时事纵横】急宣三孩政策 中共遭三大拷问</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/31/n12988550.md#1">三孩政策响应不？新华社民调结果被急删</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/30/n12986400.md#1">购物泊车占满停车格 杜汶泽见证台湾感人一幕</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/6/1/n12989854.md#1">刘德华晒录歌视频 素颜朝天下巴皱纹明显</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/31/n12987082.md#1">《新泰山》男主角乔·劳拉坠机身亡 享年58岁</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/31/n12989156.md#1">张艺谋曾因超生遭罚 网友：敢向党讨回748万？</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/6/1/n12992258.md#1">周星驰难相处？《新喜剧之王》主角还原实况</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/31/n12987930.md#1">英国医生：若指甲有这种变化 你有可能染疫</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/28/n12981263.md#1">早上10分钟是养生关键？中医教你起床保健术</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/4/16/n12884888.md#1">吃蛋白质6大误区 一次破解！吃错反而伤身</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/6/1/n12990286.md#1">像另外空间的入口 在欧洲城市出现</a></li>
-<li><a href="https://github.com/snxhgu316/djy/blob/master/gb/21/5/31/n12987640.md#1">疫情下善心房东减免房租 台湾网友：我哭了</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/snxhgu316/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/snxhgu316/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/1/n12992137.htm">【忠义传】以身挡敌 曹操的首席保镖典韦</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/1/n12992137.htm">【忠义传】以身挡敌 曹操的首席保镖典韦</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/snxhgu316/djy/blob/master/gb/21/6/1/n12992137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/snxhgu316/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/snxhgu316/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/snxhgu316/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/snxhgu316/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/snxhgu316/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/1/n12992137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
